<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">MediaGrub</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <integer name="com_vk_sdk_AppId">6332423</integer>

    <string name="ad_app_id" translatable="false">ca-app-pub-7006907514552247~4457503738</string>
    <string name="ad_interst_id" translatable="false">ca-app-pub-7006907514552247/4533525358</string>

    <string name="privacy_policy_link" translatable="false">https://docs.google.com/document/d/1kVOp4JmvVopLHekZJH8_mp8BQEr2UuOdxLUuYXpvXwc/edit?usp=sharing</string>

    <string name="action_settings">Settings</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_search_accounts" tools:ignore="MissingTranslation">Search accounts</string>
    <string name="vp_title_friends">Friends</string>
    <string name="vp_title_groups">Groups</string>
    <string name="menu_item_layout">Change layout</string>
    <string name="notif_action_pause">Pause</string>
    <string name="notif_action_start">Start</string>
    <string name="notif_action_stop">Stop</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_task_message">Are you sure to delete current task?</string>
    <string name="menu_item_select_all">Select all</string>
    <string name="menu_item_download">Download</string>
    <string name="menu_item_delete">Delete</string>
    <string name="dialog_delete_selected">Are you sure to delete selected items?</string>
    <string name="vp_title_active">Active</string>
    <string name="vp_title_completed">Completed</string>
    <string name="intent_chooser_title">Open with:</string>
    <string name="menu_item_share">Share</string>
    <string name="chooser_send_to">Send to:</string>
    <string name="nav_item_vkontakte">VKontakte</string>
    <string name="nav_item_downloads">Downloads</string>
    <string name="service_item_authorization">Authorization</string>
    <string name="service_item_contacts">Contacts</string>
    <string name="service_item_custom">Custom</string>
    <string name="service_item_search">Photo search</string>
    <string name="service_item_own">My albums</string>
    <string name="menu_item_load_all">Load all</string>
    <string name="dialog_title_loading">Loading</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="message_nothing_found">Nothing found</string>
    <string name="dialog_exit_message">Exit?</string>
    <string name="vp_custom_users_title">Users</string>
    <string name="vp_custom_groups_title">Groups</string>
    <string name="vk_system_album_profile">Profile photos</string>
    <string name="vk_system_album_wall">Wall photos</string>
    <string name="user_search_name">Search</string>
    <string name="dialog_task_prepare_title">Preparing</string>
    <string name="dialog_task_prepare_message">Please wait</string>
    <string name="hint_log_in_to_see">Log in to see here a list of your %1$s</string>
    <string name="hint_custom_users">Here you can add arbitrary %1$s by id, short name or by url to a page</string>
    <string name="hint_search">Search photos by tags</string>
    <string name="hint_search_users" tools:ignore="MissingTranslation">Long tap on result item will add it into saved list</string>
    <string name="hint_friends">friends</string>
    <string name="hint_users">users</string>
    <string name="hint_groups">groups</string>
    <string name="hint_albums">albums</string>
    <string name="button_log_in">Log In</string>
    <string name="button_log_out">Log Out</string>
    <string name="message_success_added">Successfully added</string>
    <string name="message_success_added_but_private" tools:ignore="MissingTranslation">Successfully added, but due to the privacy settings of the account, receiving content will not be available until the account becomes public</string>
    <string name="message_already_exists">Already exists</string>
    <string name="menu_item_add">Add</string>
    <string name="button_search">Search</string>
    <string name="button_add">Add</string>
    <string name="activity_auth_title">Authorization</string>
    <string name="search_input_hint">Id, short name or page url</string>
    <string name="downloads_title">Downloads</string>
    <string name="nav_item_instagram">Instagram</string>
    <string name="hint_blogs">blogs</string>
    <string name="vp_title_photo">Photo</string>
    <string name="vp_title_video">Video</string>
    <string name="nav_item_twitter">Twitter</string>
    <string name="nav_item_tumblr">Tumblr</string>
    <string name="nav_item_flickr">Flickr</string>
    <string name="nav_menu_item_rate">Rate</string>
    <string name="nav_menu_item_share">Share</string>
    <string name="nav_menu_item_about">About</string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy using this app, please take a moment to rate it.
        It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_dialog_positive">Rate now</string>
    <string name="rate_dialog_negative">Never</string>
    <string name="rate_dialog_neutral">Later</string>
    <string name="preference_version_title">Version</string>
    <string name="preference_category_about">About</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_category_about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_outside_app">Open outside the app</string>
    <string name="custom_user_not_found">Profile not found. Check input data and make sure the profile you are looking for has public access.</string>

    <string-array name="array_send_to_service_names">
        <item>@string/nav_item_vkontakte</item>
        <item>@string/nav_item_instagram</item>
        <item>@string/nav_item_twitter</item>
        <item>@string/nav_item_tumblr</item>
        <item>@string/nav_item_flickr</item>
    </string-array>
</resources>
