<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_item_vk"
            android:icon="@drawable/ic_action_vk"
            android:title="@string/nav_item_vkontakte"/>
        <item
            android:id="@+id/nav_menu_item_inst"
            android:icon="@drawable/ic_action_instagram"
            android:title="@string/nav_item_instagram"/>
        <item
            android:id="@+id/nav_menu_item_flickr"
            android:icon="@drawable/ic_action_flickr"
            android:title="@string/nav_item_flickr"/>
        <item
            android:id="@+id/nav_menu_item_twitter"
            android:icon="@drawable/ic_twitter_24dp"
            android:title="@string/nav_item_twitter"/>
        <item
            android:id="@+id/nav_menu_item_tumblr"
            android:icon="@drawable/ic_tumblr_24dp"
            android:title="@string/nav_item_tumblr"/>
        <item
            android:id="@+id/nav_menu_item_tasks"
            android:icon="@drawable/ic_file_download_white_24dp"
            android:title="@string/nav_item_downloads"/>
    </group>

    <group
        android:id="@+id/external_navigation_group"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_menu_item_rate"
            android:icon="@drawable/ic_star_half_white_24dp"
            android:title="@string/nav_menu_item_rate"/>
        <item
            android:id="@+id/nav_menu__item_share"
            android:icon="@drawable/ic_share_white_24dp"
            android:title="@string/nav_menu_item_share"/>
        <item
            android:id="@+id/nav_menu_item_about"
            android:icon="@drawable/ic_help_outline_white_24dp"
            android:title="@string/nav_menu_item_about"/>

    </group>


</menu>
