<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/background"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_default">

        <EditText
            android:id="@+id/input_edit_text"
            android:layout_margin="@dimen/dimen_default"
            android:layout_width="match_parent"
            android:text=""
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/search_input_hint"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_edit_text"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_black"
            android:text="@string/button_search"
            android:textColor="@android:color/white"
            android:visibility="visible"
            />


        <include layout="@layout/holder_user"
                 android:id="@+id/layout_user"
                 android:visibility="invisible"
                 android:layout_below="@id/search_btn"
                 android:layout_marginTop="@dimen/dimen_default"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_user"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/dimen_default"
            android:layout_marginRight="@dimen/dimen_default"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_black"
            android:text="@string/button_add"
            android:textColor="@android:color/white"
            android:visibility="invisible"
            />

    </RelativeLayout>
</ScrollView>